# pandas_pvt_table_n_postgres

./: .env.template  README.md  pandas_pvt_table.ipynb  pyproject.toml
src/: setup.py
